fix width on mobile devices

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -20,7 +20,6 @@ html{
 .container {
     margin-left: auto;
     margin-right: auto;
-    width: 700px;
 }
 
 .task-list{
